--- a/main.html
+++ b/main.html
@@ -11,6 +11,40 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div>
+		<table>
+			<caption>Basic HTML Table</caption>
+			<thead>
+				<tr>
+					<th>
+						roll number
+					</th>
+					<th>
+						name
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						65
+					</td>
+					<td>
+						xyz
+					</td>
+				</tr>
+				<tr>
+					<td>
+						62
+					</td>
+					<td>
+						vcjs
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
 </body>
 
 </html>
